# termcraft

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-06-20-preset-import-export.md  2026-06-20-terminal-logging.md  2026-06-21-about-dialog.md
docs/superpowers/specs/: 2026-06-19-connection-reachability-design.md  2026-06-19-preset-output-capture-design.md  2026-06-20-preset-import-export-design.md  2026-06-20-terminal-logging-design.md  2026-06-21-about-dialog-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  ipc_commands.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs  models.rs  store.rs
src-tauri/src/connection/: local.rs  logger.rs  manager.rs  mod.rs  serial.rs  ssh.rs  telnet.rs
src-tauri/src/preset/: engine.rs  mod.rs  models.rs  scheduler.rs  template.rs
src-tauri/src/reachability/: mod.rs
src-tauri/src/security/: credentials.rs
src/components/: AboutDialog.tsx
src/components/connection/: ConnectionCard.tsx  ConnectionForm.tsx  ConnectionList.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TabBar.tsx
src/components/preset/: CommandItem.tsx  PresetEditor.tsx  PresetImportDialog.tsx  PresetPanel.tsx  PresetRunner.tsx  PresetScheduler.tsx  (+1 more)
src/content/: about.md
src/hooks/: useChannel.ts  useConnection.ts  usePreset.ts  useTerminal.ts
src/stores/: appStore.ts  connectionStore.ts  presetStore.ts
src/styles/: global.css
src/types/: connection.ts  preset.ts  terminal.ts
(+5 files in other folders)
